--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/GLIP"]
-	path = src/GLIP
-	url = https://github.com/microsoft/GLIP/
+[submodule "pipeline/src/GLIP"]
+	path = pipeline/src/GLIP
+	url = https://github.com/microsoft/GLIP
